--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,11 +56,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CheckPointMaster.cs" />
+    <Compile Include="Assets\Scripts\MovingTrap.cs" />
     <Compile Include="Assets\Scripts\Checkpoint.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ButtonPress.cs" />
     <Compile Include="Assets\Scripts\MouseLook.cs" />
-    <Compile Include="Assets\Scripts\MovingTrap.cs" />
+    <Compile Include="Assets\Scripts\EndSceneTransition.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
